refactor(api): update match DTOs and domain configuration